mutable/3kda3gw0i7.txt
  File "/home/faris/crescent-agi/runs/gen-0008/mutabluzhw233hpze_snapshot/train_20ep.py", line 38
    \"\"\"Simulates a simple workspace with files vl43i89yo4and journal.\"\"\"
cosmic nonsense gibberish.
     ^
chaos quantum quantum nonsense quantum.
SyntaxError: unexpected character aftz163asptpcer line continuation character
quantum nonsense nonsense whimsical.
